extracted game rules from model

--- a/Asteroids/Asteroids.csproj
+++ b/Asteroids/Asteroids.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Model\AsteroidsGame.cs" />
     <Compile Include="Model\FrameEventArgs.cs" />
     <Compile Include="Model\GameObject.cs" />
+    <Compile Include="Model\GameRules.cs" />
+    <Compile Include="Model\IGameRules.cs" />
     <Compile Include="Model\SpaceShip.cs" />
     <Compile Include="View\GameForm.cs">
       <SubType>Form</SubType>
